Correção de alguns bugs.